Fixed failed browser tests

--- a/tasks/templates/suite.html
+++ b/tasks/templates/suite.html
@@ -56,7 +56,7 @@
     })();
   </script>
 
-  <script type="text/javascript" src="cordova.test.js"></script>
+  <script type="text/javascript" src="xface.test.js"></script>
 
   <script type="text/javascript">
       var require = cordova.require;
